# cose

./: Cargo.toml  README
src/: lib.rs  serialize.rs  verify.rs
tests/: unit_tests.rs
