[package]
name = "verify-signed-digest"
version = "0.1.0"
authors = ["David Keeler <mozkeeler@gmail.com>"]
description = "verify a signed digest"
license = "MPL-2.0"
categories = ["cryptography"]
keywords = ["signature", "verification"]

[dependencies]
scopeguard = "0.3.2"

[dev-dependencies]
sha2 = "0.6.0"
